argocd/apps/media-server/wrapperr/manifests/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: wrapperr-app
  name: wrapperr-http-route
spec:
  parentRefs:
    - name: gateway-api
      namespace: istio-system
      sectionName: https
  hostnames:
    - wrapperr.yanello.net
  rules:
    - backendRefs:
        - name: wrapperr
          port: 8282
